css/card.css
.push-card
{
  position: relative;
  display: block;
  margin: 10px;
  box-shadow: 0 1px 1px #d0d0d0;
  width: auto;
  min-height: 80px;
  max-height: 80px;
  transition: max-height 0.5s ease 0.3s;
  overflow-y: hidden;

  background-color: white;
}
.push-card:hover
{
  max-height: 500px;
}
.push-card:hover .card-control
{
  visibility:visible;
}
.push-card:hover .card-main
{
  min-height: 85px;
}
.push-card hr
{
  color: #d0d0d0;
}
.card-main
{
  position: relative;
  display: inline-block;
  float: left;
  width: 98%;
  transition: min-height 0.5s ease 0.3s;
  overflow-y: hidden;
}
.card-logo
{
  padding: 10px 5%;
  position: relative;
  pointer-events: none;
  display: inline-block;
  float: left;
  width: 20%;
}
.card-logo img
{
  width: 100%;
}
.card-content
{
  position: relative;
  display: inline-block;
  float: right;
  width: 80%;
}
.card-content h2
{
  height: 28px;
  overflow: hidden;
}
.card-content img
{
  width: 100%;
  height: auto;
}
.card-control
{
  visibility:hidden;
  margin: 0 auto;
  width: 100%;
  height: 200%;
  transition: visibility 0 linear 0.8s;
}
.control
{
  width: 50%;
  height: 25px;
  line-height: 150%;
  display: inline-block;
  text-align: center;
  cursor: pointer;
  border-top-style: solid;
  border-width: 1px;
  border-color: #d0d0d0;
  color: black;
  transition: background-color 0.2s ease;
}
.open
{
  border-right-style: solid;
}
.open:hover
{
  background-color: #82d072;
  color: white;
}
.open:active
{
  background-color: #62b052;
}
.delete:hover
{
  background-color: #f55038;
  color: white;
}
.delete:active
{
  background-color: #d53018;
}

.google-maps {
  position: relative;
  padding-bottom: 75%;
  height: 0;
  overflow: hidden;
}
.google-maps iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100% !important;
  height: 100% !important;
}

